--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </ul>
             </div>
             <div class="skills-box">
-                <h3>Databases</h3>
+                <h3>Databases/tools</h3>
                 <ul>
                     <li>PL/Sql</li>
                     <li>MySQL</li>
