--- a/index.html
+++ b/index.html
@@ -39,10 +39,13 @@
                 </ul>
             </div>
             <div class="skills-box">
-                <h3>Databases/tools</h3>
+                <h3>Databases / Tools</h3>
                 <ul>
-                    <li>PL/Sql</li>
+                    <li>Github</li>
                     <li>MySQL</li>
+                    <li>Visual studio code</li>
+                    <li>Postman</li>
+                    <li>Swagger</li>
                 </ul>
             </div>
             <div class="skills-box">
@@ -50,10 +53,8 @@
                 <ul>
                     <li>Python</li>
                     <li>Django</li>
-                    <li>Json, Postman</li>
                     <li>RestAPI</li>
                     <li>Flask</li>
-                    <li>Github</li>
                 </ul>
             </div>
         </div>
@@ -64,28 +65,31 @@
     <section id="certificates">
         <h2>Certificates</h2>
         <ul>
-            <li><strong>Certificate in Web Development</strong> - Advance Python Full Stack Development (APFS)</li>
-            <li><strong>Certification</strong> - </li>
+            <li><strong>Certificate in Web Development</strong> - ADVANCED PYTHON FULL STACK DEVELOPER (APFS)</li>
+            <li><strong>Certification</strong> - DIPLOMA IN COMPUTER APPLICATION AND DESIGNING (DCAD)  </li>
             
         </ul>
     </section>
 
     <section id="projects">
-        <h2>Projects</h2>
+        <h2>Projects</h2><hr>
         <div>
             <h3>Project 1</h3>
-            <p>Description of project 1 goes here.</p>
-            <a href="#">View Project</a>
-        </div>
+            <h3>BOOKSHOP </h3>
+            <p>The Bookshop Project is an initiative dedicated to supporting independent bookstores as vital community hubs that foster engagement and a love for reading. It emphasizes the importance of personal connections between booksellers and customers while advocating for the sustainability of these cultural spaces.   </p>
+            <a href="https://vijaymurugan92.github.io/My-project/ ">View Project</a>
+        </div><hr>
         <div>
             <h3>Project 2</h3>
-            <p>Description of project 2 goes here.</p>
-            <a href="#">View Project</a>
-        </div>
+            <h3>PORTFOLIO WEBSITE </h3>
+            <p>Create a personal portfolio to showcase project and skills, utilizing responsive design principle and modern web technologies.</p>
+            <a href="https://vijaymurugan92.github.io/portfolio/ ">View Project</a>
+        </div><hr>
         <div>
             <h3>Project 3</h3>
-            <p>Description of project 3 goes here.</p>
-            <a href="#">View Project</a>
+            <h3>MATHS QUIZ  </h3>
+            <p>Developed an interactive math quiz application that allows users to answer various math questions. The app features a user-friendly interface built with HTML and styled with CSS, while JavaScript is used for the logic and scoring system. </p>
+            <a href="https://vijaymurugan92.github.io/Quizapp/ ">View Project</a>
         </div>
     </section>
 
